feat: Implement real-world data experiments (MNIST, CIFAR), LDA model, and advanced robustness metrics.

--- a/Comp450_CertifiedRobustnessinOverparametrizedRegion.ipynb
+++ b/Comp450_CertifiedRobustnessinOverparametrizedRegion.ipynb
@@ -43,8 +43,10 @@
         "    sys.path.append(os.path.abspath(REPO_NAME))\n",
         "\n",
         "import config\n",
-        "from experiments import run_experiment_A, run_experiment_B, run_experiment_C\n",
-        "from utils.plotting_utils import plot_experiment_a, plot_experiment_b, plot_experiment_c\n",
+        "from experiments import (run_experiment_A, run_experiment_B, run_experiment_C, \n",
+        "                         run_experiment_D, run_experiment_MNIST, run_experiment_CIFAR)\n",
+        "from utils.plotting_utils import (plot_experiment_a, plot_experiment_b, plot_experiment_c, \n",
+        "                                 plot_experiment_d, plot_experiment_mnist, plot_experiment_cifar)\n",
         "\n",
         "print(\"Environment setup complete. Modules imported.\")"
       ],
@@ -70,7 +72,7 @@
       "cell_type": "code",
       "source": [
         "df_A = run_experiment_A()\n",
-        "plot_experiment_a(df_A)"
+        "plot_experiment_a(df_A, config.N_TRAIN)"
       ],
       "metadata": {
         "id": "run_a"
@@ -82,22 +84,22 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "## Experiment B: Accuracy-Robustness Pareto Frontier\n",
-        "Sweeping the regularization parameter $\\lambda$ for the Ridge regressor to find the trade-off curve.\n",
+        "## Experiment D: Noise Sensitivity\n",
+        "Analyzing the impact of label noise rate on robust accuracy for discriminative and generative models.\n",
         "---"
       ],
       "metadata": {
-        "id": "exp_b_header"
+        "id": "exp_d_header"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "df_B, point_B = run_experiment_B()\n",
-        "plot_experiment_b(df_B, point_B)"
+        "df_D = run_experiment_D()\n",
+        "plot_experiment_d(df_D)"
       ],
       "metadata": {
-        "id": "run_b"
+        "id": "run_d"
       },
       "execution_count": null,
       "outputs": []
@@ -106,22 +108,22 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "## Experiment C: The Hidden Cost on Anisotropic Data\n",
-        "Evaluating the standard accuracy cost of the generative approach on data with decaying variance.\n",
+        "## Real Data: MNIST (0 vs 1)\n",
+        "Evaluating overparametrization effects on real hand-written digits using a binary subset.\n",
         "---"
       ],
       "metadata": {
-        "id": "exp_c_header"
+        "id": "exp_mnist_header"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "df_C = run_experiment_C()\n",
-        "plot_experiment_c(df_C, config.N_TRAIN)"
+        "df_MNIST = run_experiment_MNIST()\n",
+        "plot_experiment_mnist(df_MNIST)"
       ],
       "metadata": {
-        "id": "run_c"
+        "id": "run_mnist"
       },
       "execution_count": null,
       "outputs": []
@@ -129,6 +131,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "## Real Data: CIFAR (Cat vs Dog)\n",
+        "Using Pre-trained ResNet18 features projected into high-dimensional space.\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "exp_cifar_header"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_CIFAR = run_experiment_CIFAR()\n",
+        "plot_experiment_cifar(df_CIFAR)"
+      ],
+      "metadata": {
+        "id": "run_cifar"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
         "## Summary Results"
       ],
       "metadata": {
@@ -138,13 +165,13 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"--- EXPERIMENT A ---\")\n",
-        "print(df_A[['N', 'Ratio', 'Rob_A', 'Norm_A', 'Rob_B', 'Norm_B']].to_string(index=False))\n",
-        "print(\"\\n--- EXPERIMENT B ---\")\n",
-        "print(f\"Generative Point (Acc, Rob): {point_B}\")\n",
-        "print(df_B.to_string(index=False))\n",
-        "print(\"\\n--- EXPERIMENT C ---\")\n",
-        "print(df_C.to_string(index=False))"
+        "if 'df_MNIST' in locals():\n",
+        "    print(\"--- MNIST RESULTS ---\")\n",
+        "    print(df_MNIST.groupby('N')[['Rob_R', 'Rob_G', 'Rob_L']].mean().reset_index())\n",
+        "\n",
+        "if 'df_CIFAR' in locals():\n",
+        "    print(\"\\n--- CIFAR RESULTS ---\")\n",
+        "    print(df_CIFAR.groupby('N')[['Rob_R', 'Rob_G']].mean().reset_index())"
       ],
       "metadata": {
         "id": "summary_print"
