feat: Add Experiment E to compare standard, adversarially trained, and generative models, including its execution, plotting, and a new notebook for experiment runs.

--- a/Comp450_CertifiedRobustnessinOverparametrizedRegion.ipynb
+++ b/Comp450_CertifiedRobustnessinOverparametrizedRegion.ipynb
@@ -44,9 +44,9 @@
         "\n",
         "import config\n",
         "from experiments import (run_experiment_A, run_experiment_B, run_experiment_C, \n",
-        "                         run_experiment_D, run_experiment_MNIST, run_experiment_CIFAR)\n",
+        "                         run_experiment_D, run_experiment_E, run_experiment_MNIST, run_experiment_CIFAR)\n",
         "from utils.plotting_utils import (plot_experiment_a, plot_experiment_b, plot_experiment_c, \n",
-        "                                 plot_experiment_d, plot_experiment_mnist, plot_experiment_cifar)\n",
+        "                                 plot_experiment_d, plot_experiment_e, plot_experiment_mnist, plot_experiment_cifar)\n",
         "\n",
         "print(\"Environment setup complete. Modules imported.\")"
       ],
@@ -100,6 +100,30 @@
       ],
       "metadata": {
         "id": "run_d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "## Experiment E: Adversarial Training Comparison\n",
+        "Comparing standard discriminative training, adversarial training, and the generative approach.\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "exp_e_header"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_E = run_experiment_E()\n",
+        "plot_experiment_e(df_E)"
+      ],
+      "metadata": {
+        "id": "run_e"
       },
       "execution_count": null,
       "outputs": []
@@ -165,8 +189,12 @@
     {
       "cell_type": "code",
       "source": [
+        "if 'df_E' in locals():\n",
+        "    print(\"--- EXP E: Adversarial Training ---\")\n",
+        "    print(df_E.groupby('N')[['Rob_Standard', 'Rob_AT', 'Rob_Generative']].mean().reset_index())\n",
+        "\n",
         "if 'df_MNIST' in locals():\n",
-        "    print(\"--- MNIST RESULTS ---\")\n",
+        "    print(\"\\n--- MNIST RESULTS ---\")\n",
         "    print(df_MNIST.groupby('N')[['Rob_R', 'Rob_G', 'Rob_L']].mean().reset_index())\n",
         "\n",
         "if 'df_CIFAR' in locals():\n",
